# kinect-knob

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
deploy/: 99-kinect.rules  UNRAID_AGENT.md  unraid-template.xml
docs/: DESIGN.md
native/: kk_exposure.cpp
scripts/: dev-windows.ps1
src/kinectknob/: __init__.py  __main__.py  config.py  controller.py  debugdraw.py  filters.py  main.py  state.py  tuning.py  types.py
src/kinectknob/capture/: __init__.py  base.py  crop.py  ir.py  kinect_v1.py  kinect_v2.py  kv2_exposure.py  kv2_stream.py  lowlight.py  webcam.py
src/kinectknob/gestures/: engine.py
src/kinectknob/ha/: __init__.py  client.py
src/kinectknob/tracking/: hand_tracker.py
src/kinectknob/web/: server.py
src/kinectknob/web/static/: index.html
tests/: conftest.py  test_busy_hand.py  test_config.py  test_controller.py  test_crop.py  test_filters.py  test_ha_client.py  test_ir.py  test_ir_photo_depth.py  test_knob.py  test_kv2_leak.py  test_kv2_stream.py  test_lowlight.py  test_photo_stack.py  test_playpause.py  test_regressions.py  test_swipe.py  test_tuning.py
